--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "material-ui-icons": "^1.0.0-beta.36",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
-    "react-scripts": "1.1.4"
+    "react-redux": "^5.0.7",
+    "react-scripts": "1.1.4",
+    "redux": "^3.7.2",
+    "redux-loop": "^4.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
