--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "material-ui": "^1.0.0-beta.40",
+    "material-ui-chip-input": "^1.0.0-beta.4",
     "material-ui-icons": "^1.0.0-beta.36",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
